--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>My test page</title>
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
+    <h1>style="border:green; border-width:8px; border-style:dashed"> Mozilla is cool</h1>
     <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
-    <p>At Mozilla, we’re a global community of</p>
+    <p> At Mozilla, we’re a global community of</p>
 
     <ul> <!-- changed to list in the tutorial -->
       <li>technologists</li>
@@ -16,6 +16,7 @@
       <li>builders</li>
     </ul>
     <p style="color:#FF0000";>Red paragraph text</p>
+
     <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. 
       We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper tellus quis est lacinia, non consectetur urna consequat. Aliquam sed finibus ipsum. Suspendisse nec euismod nibh. Donec id orci risus. Aliquam erat volutpat. Praesent in sem diam. Nam rutrum dui vitae ante scelerisque gravida. In eget erat sed tellus dignissim tincidunt eget non eros. Nulla facilisi. Aenean arcu tellus, gravida sed ex ut, pellentesque dapibus erat. Duis quis quam eget diam rhoncus euismod. </p>
